# final_tax_return

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  index.py  pyproject.toml
assets/: camera.js  crypto.js  style.css  supabase-auth.js
components/: __init__.py  common.py
pages/: __init__.py  login.py  records.py  report.py  settings.py
pages/records/: __init__.py  callbacks.py  form.py  layout.py
scripts/: deploy.sh  migrate_to_supabase.py
supabase/migrations/: 001_initial_schema.sql
utils/: __init__.py  auth.py  calculations.py  constants.py  database.py  gemini.py  storage.py  supabase_client.py  validation.py
