[project]
name = "final-tax-return"
version = "1.0.0"
description = "確定申告用収支記録アプリケーション"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "supabase>=2.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
tax-app = "app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
